# ipaTool

./: .gitignore  COMMIT_CHECKLIST.md  Dockerfile  Dockerfile.tauri  FEATURES_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  OTA_CHECKLIST.md  README.md  build-rust.sh  dev-rust.sh  docker-compose.tauri.yml  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  translate.py  vite.config.js
.github/workflows/: ci.yml  docker.yml
docs/: OTA_EXAMPLE.md  OTA_INSTALL_IMPLEMENTATION.md
server/: Cargo.toml
server/src/: apple_auth.rs  crypto.rs  database.rs  download_manager.rs  ipa_handler.rs  lib.rs  main.rs  ota_install.rs  signature.rs  web_jobs.rs
src/: App.vue  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AccountManager.vue  AppArtwork.vue  AppSubscription.vue  BatchDownload.vue  DownloadManager.vue  DownloadQueue.vue  IpaManager.vue  Login.vue  Settings.vue  TabLayout.vue
src/composables/: useNotifications.js
src/stores/: app.js
