[package]
name = "ipa-tool-desktop"
version = "1.0.5"
edition = "2021"

[lib]
name = "ipa_tool_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ipa-tool-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
